--- a/app/web/app.css
+++ b/app/web/app.css
@@ -712,6 +712,12 @@ button:disabled {
   margin-bottom: 1rem;
 }
 
+.calendar-imdb-actions {
+  display: flex;
+  justify-content: flex-end;
+  margin: -0.25rem 0 1rem;
+}
+
 .calendar-filter-field {
   display: flex;
   flex-direction: column;
